--- a/HHIS_Frontend/HHISIT2018144/src/app/index/index.component.scss
+++ b/HHIS_Frontend/HHISIT2018144/src/app/index/index.component.scss
@@ -95,3 +95,13 @@
 .form1 button:hover {
 	cursor: pointer;
 }
+.covid{
+    position: absolute;
+    margin-left: 20px;
+    bottom: 0;
+}
+.covid p{
+    letter-spacing: 3px;
+   font-weight: bold;
+   color: rgba(37, 37, 37, 0.842);
+}
