--- a/HHIS_Frontend/HHISIT2018144/src/app/header/header.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar style="background-color: #dee8f5e5;">
   <mat-toolbar-row class="justify-content-between">
     <button mat-icon-button (click)="toggleSidebar()">
       <mat-icon>menu</mat-icon>
