--- a/HHIS_Frontend/HHISIT2018144/src/app/index/index.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/index/index.component.html
@@ -10,6 +10,12 @@
         </div>
         <div class="col-md-9 i_secend">
 
+            <div class="covid">
+                <p>Covid 19 | New Cases <span style="color: rgb(255, 181, 71);">{{response?.local_new_cases}}  </span> |
+                    New Death <span style="color: red;">{{response?.local_new_deaths}}  </span> |
+                    Total Recovered <span style="color: green;">{{response?.local_recovered}}  </span></p>
+            </div>
+
             <div class="login">
                 <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#LoginModal" ><i class="fas fa-sign-in-alt"></i>
                     <span> Login</span></button>
