--- a/HHIS_Frontend/HHISIT2018144/src/app/staff/staff.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/staff/staff.component.html
@@ -1,11 +1,19 @@
-
-<div fxLayout fxLayoutAlign="center center">
-    <mat-form-field fxFlex="40%">
-      <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Filter">
-    </mat-form-field>
+<br>
+<div class="container staffTableTop">
+  <div class="row">
+    <div class="col-sm-6">
+      <button style="margin-top: 15px; margin-right: 2px; width: 60%;" mat-raised-button (click)="openDialog()">Create <mat-icon>queue</mat-icon></button>
+    </div>
+    <div class="col-sm-6">
+      <mat-form-field fxFlex="100%">
+        <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Filter" >
+      </mat-form-field>
+    </div>
   </div>
+</div>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 staffTable">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
@@ -39,13 +47,30 @@
         <td mat-cell *matCellDef="let element"> {{element.staffRole}} </td>
     </ng-container>
 
-  
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <td mat-cell *matCellDef="let element"> <button mat-icon-button  matTooltip="View">
+        <mat-icon color="primary">visibility</mat-icon>
+      </button>
+      <button mat-icon-button  matTooltip="Edit">
+   
+        <mat-icon style="color:green" (click)="onEdit(element)">edit</mat-icon>
+      
+      </button>
+
+      <button mat-icon-button  matTooltip="Delete">
+        <mat-icon color="warn">delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
   </table>
+  
   <mat-paginator [pageSizeOptions]="[5, 10, 20]"
   showFirstLastButtons 
-  aria-label="Select page of periodic elements">
+  aria-label="Select page of periodic elements" class="staffTable">
 </mat-paginator>
   
