--- a/HHIS_Frontend/HHISIT2018144/src/app/staff/staff.component.scss
+++ b/HHIS_Frontend/HHISIT2018144/src/app/staff/staff.component.scss
@@ -1,3 +1,8 @@
-table {
-    width: 100%;
+.staffTable {
+  margin: 0px auto;
+    width: 95%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.589);
   }
+.staffTableTop{
+    width: 95%;
+}
