--- a/HHIS_Frontend/HHISIT2018144/src/app/sidenav/sidenav.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/sidenav/sidenav.component.html
@@ -9,7 +9,7 @@
     <mat-icon>dashboard</mat-icon> Dashboard
   </a>
   <a mat-list-item routerLinkActive="list-item-active" routerLink="das/staff"> <mat-icon>person_add</mat-icon> Staff </a>
-  <a mat-list-item> <mat-icon>edit</mat-icon> Link 5 </a>
-  <a mat-list-item> <mat-icon>edit</mat-icon> Link 6 </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/doctor"> <mat-icon> <i class="fas fa-user-md"></i></mat-icon> Doctor </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/ward"> <mat-icon> <i class="fas fa-warehouse"></i></mat-icon> Ward </a>
   <a mat-list-item (click)=logout()> <mat-icon>logout</mat-icon> Logout </a>
 </mat-nav-list>
