--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/doctorDetails/doctor/doctor.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/doctorDetails/doctor/doctor.component.html
@@ -42,15 +42,17 @@
       <td mat-cell *matCellDef="let element"> {{element.joindDate}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="gender">
-      <th mat-header-cell *matHeaderCellDef> Gender</th>
-      <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
-  </ng-container>
 
-    <ng-container matColumnDef="staffRole">
-        <th mat-header-cell *matHeaderCellDef> staffRole </th>
-        <td mat-cell *matCellDef="let element"> {{element.staffRole}} </td>
+    <ng-container matColumnDef="gender">
+        <th mat-header-cell *matHeaderCellDef> gender </th>
+        <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
     </ng-container>
+
+    
+    <ng-container matColumnDef="doctorSpecialty">
+      <th mat-header-cell *matHeaderCellDef> Specialty </th>
+      <td mat-cell *matCellDef="let element"> {{element.doctorSpecialty}} </td>
+  </ng-container>
 
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> Action </th>
