--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/ward/ward.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/ward/ward.component.html
@@ -19,43 +19,45 @@
           The actual rendered columns are set as a property on the row definition" -->
   
  
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> ward Number </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
   
     
-    <ng-container matColumnDef="phoneNo">
-      <th mat-header-cell *matHeaderCellDef> phoneNo </th>
-      <td mat-cell *matCellDef="let element"> {{element.phoneNo}} </td>
+    <ng-container matColumnDef="wardName">
+      <th mat-header-cell *matHeaderCellDef> wardName </th>
+      <td mat-cell *matCellDef="let element"> {{element.wardName}} </td>
     </ng-container>
   
     
-    <ng-container matColumnDef="nic">
-      <th mat-header-cell *matHeaderCellDef> nic </th>
-      <td mat-cell *matCellDef="let element"> {{element.nic}} </td>
+    <ng-container matColumnDef="numberOfPatient">
+      <th mat-header-cell *matHeaderCellDef> Total Patient </th>
+      <td mat-cell *matCellDef="let element"> {{element.numberOfPatient}} </td>
     </ng-container>
   
   
-    <ng-container matColumnDef="joindDate">
-      <th mat-header-cell *matHeaderCellDef> joindDate </th>
-      <td mat-cell *matCellDef="let element"> {{element.joindDate}} </td>
+    <ng-container matColumnDef="numberOfDeath">
+      <th mat-header-cell *matHeaderCellDef> Total Death </th>
+      <td mat-cell *matCellDef="let element"> {{element.numberOfDeath}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="gender">
-      <th mat-header-cell *matHeaderCellDef> Gender</th>
-      <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
+    <ng-container matColumnDef="WardSection">
+      <th mat-header-cell *matHeaderCellDef>Add Ward Section </th>
+      <td mat-cell *matCellDef="let element">
+      <button mat-flat-button color="primary" (click)="onAdd(element)">
+        Add
+      </button>
+
+    </td>
   </ng-container>
-
-    <ng-container matColumnDef="staffRole">
-        <th mat-header-cell *matHeaderCellDef> staffRole </th>
-        <td mat-cell *matCellDef="let element"> {{element.staffRole}} </td>
-    </ng-container>
 
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> Action </th>
-      <td mat-cell *matCellDef="let element"> <button mat-icon-button  matTooltip="View">
-        <mat-icon color="primary" (click)="onView(element)">visibility</mat-icon>
+      <td mat-cell *matCellDef="let element">
+   <button mat-icon-button  matTooltip="View">
+       
+  <a [routerLink]="['ward/Section', element.id]"> <mat-icon color="primary">visibility</mat-icon></a>
       </button>
       <button mat-icon-button  matTooltip="Edit">
    
@@ -63,9 +65,6 @@
       
       </button>
 
-      <button mat-icon-button  matTooltip="Delete">
-        <mat-icon color="warn"(click)="onDelete(element)">delete</mat-icon>
-      </button>
     </td>
   </ng-container>
 
@@ -78,4 +77,8 @@
   showFirstLastButtons 
   aria-label="Select page of periodic elements" class="staffTable">
 </mat-paginator>
+
+<div>
+  <router-outlet></router-outlet>
+</div>
   
