--- a/HHIS_Frontend/HHISIT2018144/src/app/sidenav/sidenav.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/sidenav/sidenav.component.html
@@ -8,8 +8,11 @@
   <a mat-list-item routerLinkActive="list-item-active" routerLink="das/dashboard">
     <mat-icon>dashboard</mat-icon> Dashboard
   </a>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/staff"> <mat-icon>person_add</mat-icon> Staff </a>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/doctor"> <mat-icon> <i class="fas fa-user-md"></i></mat-icon> Doctor </a>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/ward"> <mat-icon> <i class="fas fa-warehouse"></i></mat-icon> Ward </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/staff" *ngIf="role=='hospital' || role=='admin'"> <mat-icon>person_add</mat-icon> Staff </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/doctor"*ngIf="role=='hospital' || role=='admin'"> <mat-icon >bubble_chart</mat-icon>Add Doctor </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/ward" *ngIf="role=='hospital' || role=='admin'"> <mat-icon> business</mat-icon> Ward </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/pharmacy" *ngIf="role=='hospital' || role=='admin'"> <mat-icon>add_to_queue</mat-icon> Pharmacy </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/prescription" *ngIf="role=='doctor'"> <mat-icon>fingerprint</mat-icon> Prescription </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/account" *ngIf="role=='hospital' || role=='admin'"> <mat-icon>group_add</mat-icon>Account</a>
   <a mat-list-item (click)=logout()> <mat-icon>logout</mat-icon> Logout </a>
 </mat-nav-list>
