update doctor component

--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/farmacy/medicine-table/medicine-table.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/farmacy/medicine-table/medicine-table.component.html
@@ -82,5 +82,9 @@
       </ng-template>
       Content 1
     </mat-tab>
-  <mat-tab label="Third"> Content 3 </mat-tab>
+  <mat-tab label="Third"> 
+    
+   
+ 
+  </mat-tab>
 </mat-tab-group>
