--- a/HHIS_Frontend/HHISIT2018144/src/app/admin/admin.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/admin/admin.component.html
@@ -3,7 +3,7 @@
       <!-- <mat-drawer mode="side" opened="true"> -->
       <app-sidenav></app-sidenav>
     </mat-drawer>
-    <mat-drawer-content>
+    <mat-drawer-content class="body">
       <app-header (toggleSidebarForMe)="sideBarToggler()"></app-header>
       <router-outlet></router-outlet>
       <br><br>
