--- a/HHIS_Frontend/HHISIT2018144/src/app/admin/admin.component.scss
+++ b/HHIS_Frontend/HHISIT2018144/src/app/admin/admin.component.scss
@@ -12,5 +12,10 @@
   }
   
   mat-drawer {
-    background: #0f172a;
+    background: #4c6297;
+  }
+
+  .body{
+    background-image: linear-gradient(90deg, rgb(239, 244, 246) 99%,
+  rgb(3, 29, 39) 50%);
   }
