--- a/HHIS_Frontend/HHISIT2018144/src/app/sidenav/sidenav.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/sidenav/sidenav.component.html
@@ -1,6 +1,6 @@
 <mat-nav-list>
   <div class="logo py-4">
-    <h1 style="color: white;letter-spacing: 20px;">HHIS</h1>
+    <h1 style="color: white;letter-spacing: 20px;">HHSS</h1>
   </div>
   <mat-divider></mat-divider>
 <br>
@@ -11,7 +11,7 @@
   <a mat-list-item routerLinkActive="list-item-active" routerLink="das/staff" *ngIf="role=='hospital' || role=='admin'"> <mat-icon>person_add</mat-icon> Staff </a>
   <a mat-list-item routerLinkActive="list-item-active" routerLink="das/doctor"*ngIf="role=='hospital' || role=='admin'"> <mat-icon >bubble_chart</mat-icon>Add Doctor </a>
   <a mat-list-item routerLinkActive="list-item-active" routerLink="das/ward" *ngIf="role=='hospital' || role=='admin'"> <mat-icon> business</mat-icon> Ward </a>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/pharmacy" *ngIf="role=='hospital' || role=='admin'"> <mat-icon>add_to_queue</mat-icon> Pharmacy </a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="das/pharmacy" *ngIf="role=='hospital' || role=='admin' || role=='pharmacist'"> <mat-icon>add_to_queue</mat-icon> Pharmacy </a>
   <a mat-list-item routerLinkActive="list-item-active" routerLink="das/prescription" *ngIf="role=='doctor'"> <mat-icon>fingerprint</mat-icon> Prescription </a>
   <a mat-list-item routerLinkActive="list-item-active" routerLink="das/account" *ngIf="role=='hospital' || role=='admin'"> <mat-icon>group_add</mat-icon>Account</a>
   <a mat-list-item (click)=logout()> <mat-icon>logout</mat-icon> Logout </a>
