--- a/HHIS_Frontend/HHISIT2018144/src/app/Doctor/prescription-table/prescription-table.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Doctor/prescription-table/prescription-table.component.html
@@ -1,7 +1,8 @@
 
+      <br>
       <div class="container staffTableTop">
         <div class="row">
-          <div class="col-sm-5">
+          <div class="col-sm-6">
             <button style="margin-top: 15px; margin-right: 2px; width: 60%;" mat-raised-button (click)="openDialog()">Create <mat-icon>queue</mat-icon></button>
           </div>
           <div class="col-sm-6">
@@ -20,23 +21,41 @@
                 The actual rendered columns are set as a property on the row definition" -->
         
        
-          <ng-container matColumnDef="username">
-            <th mat-header-cell *matHeaderCellDef> Username </th>
-            <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+          <ng-container matColumnDef="patientName">
+            <th mat-header-cell *matHeaderCellDef> Patient Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.patientName}} </td>
           </ng-container>
         
           
-          <ng-container matColumnDef="role">
-            <th mat-header-cell *matHeaderCellDef> Role </th>
-            <td mat-cell *matCellDef="let element"> {{element.role}} </td>
+          <ng-container matColumnDef="patientNic">
+            <th mat-header-cell *matHeaderCellDef> Patient NIC </th>
+            <td mat-cell *matCellDef="let element"> {{element.patientNic}} </td>
           </ng-container>
+        
+          
+          <ng-container matColumnDef="age">
+            <th mat-header-cell *matHeaderCellDef> Age </th>
+            <td mat-cell *matCellDef="let element"> {{element.age}} </td>
+          </ng-container>
+        
+        
+          <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef> status </th>
+            <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+          </ng-container>
+      
       
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef> Action </th>
             <td mat-cell *matCellDef="let element">
+            <button mat-icon-button  matTooltip="Edit">
+         
+              <mat-icon style="color:green" (click)="onEdit(element)">edit</mat-icon>
+            
+            </button>
       
-            <button mat-icon-button *ngIf="element.role != 'hospital'" matTooltip="Delete">
-              <mat-icon  color="warn"(click)="onDelete(element)">delete</mat-icon>
+            <button mat-icon-button  matTooltip="Delete">
+              <mat-icon color="warn"(click)="onDelete(element)">delete</mat-icon>
             </button>
           </td>
         </ng-container>
@@ -50,6 +69,6 @@
         showFirstLastButtons 
         aria-label="Select page of periodic elements" class="staffTable">
       </mat-paginator>
-        
-      
+        <br>
+     
   
