--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/Accounts/account/account.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/Accounts/account/account.component.html
@@ -21,7 +21,7 @@
             <div class="form-group col-sm-6 flex-column d-flex"> <label for="">Name</label></div>
             <div class="form-group col-sm-6 flex-column d-flex">  
                 <select formControlName="username">
-                    <option *ngFor="let user of Users" value="user.email">{{user.name}}</option>
+                    <option *ngFor="let user of Users" value="{{user.email}}">{{user.name}}</option>
                 </select>
                 <span class="help-block" *ngIf="accountService.hhssLoginForm.controls['username'].invalid && accountService.hhssLoginForm.controls['username'].touched">Please Enter Valid Username !</span>
             </div>
