--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/doctorDetails/doctor/doctor.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/doctorDetails/doctor/doctor.component.html
@@ -11,7 +11,7 @@
     </div>
   </div>
 </div>
-
+<br>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 staffTable">
 
@@ -20,7 +20,7 @@
   
  
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> name </th>
+      <th style="color: #eb65d1;" mat-header-cell *matHeaderCellDef> name </th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
   
