--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/doctorDetails/doctor/doctor.component.scss
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/doctorDetails/doctor/doctor.component.scss
@@ -7,3 +7,11 @@
       width: 95%;
   }
   
+  th{
+    color: #6575eb;
+    background-color: #dde2f4d5;
+  }
+  mat-paginator{
+    font-size: bold;
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  }
