--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/staffDetails/staff/staff.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/staffDetails/staff/staff.component.html
@@ -11,7 +11,7 @@
     </div>
   </div>
 </div>
-
+<br>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 staffTable">
 
@@ -19,7 +19,7 @@
           The actual rendered columns are set as a property on the row definition" -->
   
  
-    <ng-container matColumnDef="name">
+    <ng-container style="color: #eb65d1;" matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> name </th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
