--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/leave-patient-ward/leave-patient-ward.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/leave-patient-ward/leave-patient-ward.component.html
@@ -35,7 +35,7 @@
             <div class="form-group col-sm-6 flex-column d-flex"> <label for="">Select Admitted status</label></div>
             <div class="form-group col-sm-6 flex-column d-flex"> <select formControlName="status" id="status" >
                 <option value="yes">Patient Admitted</option>
-                <option value="no">Patient Not Admitted</option>
+                <option value="no">Patient Discharge</option>
             </select> 
             <span class="help-block" *ngIf="service.patientWardSectionForm.controls['status'].invalid && service.patientWardSectionForm.controls['status'].touched">Please Enter Valid status !</span>
             </div>
