--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/ward-form/ward-form.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/ward-form/ward-form.component.html
@@ -7,7 +7,7 @@
     <form class="form-card"  [formGroup]="service.wardForm" (submit)="onSubmit()" >
         <div class="row justify-content-between text-left">
             <div class="form-group col-sm-6 flex-column d-flex"> 
-                <input type="text" id="fname" formControlName="id" placeholder="Ward Number" > 
+                <input type="number" id="fname" formControlName="id" placeholder="Ward Number" > 
                 <span class="help-block" *ngIf="service.wardForm.controls['id'].invalid && service.wardForm.controls['id'].touched">Please Enter Valid Ward Number !</span>
             </div>
             <div class="form-group col-sm-6 flex-column d-flex"> 
