--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/ward/ward.component.scss
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/wardDetails/ward/ward.component.scss
@@ -9,3 +9,12 @@
   .mat-tab-group {
     margin-bottom: 48px;
   }
+  th{
+    font-size: bold;
+    color: #6575eb;
+    background-color: #dde2f4d5;
+  }
+  mat-paginator{
+    font-size: bold;
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  }
