--- a/HHIS_Frontend/HHISIT2018144/src/app/index/index.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/index/index.component.html
@@ -29,7 +29,7 @@
                         <h1><i class="fas fa-hospital-user"></i></h1>
                     </div>
                     <div class="col-md-5 bx" style=" background-image: linear-gradient(to left, rgb(0, 163, 95),
-                    rgb(3, 94, 48));">
+                    rgb(3, 94, 48));cursor: pointer;" (click)="openUser()" >
                         User Registration
                         <h1><i class="fas fa-user-plus"></i></h1>
                     </div>
