--- a/HHIS_Frontend/HHISIT2018144/src/app/Hospital/farmacy/medicine-table/medicine-table.component.scss
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Hospital/farmacy/medicine-table/medicine-table.component.scss
@@ -15,3 +15,7 @@
     font-size: bold;
     background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
   }
+
+  mat-tab-group{
+    height: 82.2vh;
+  }
