--- a/HHIS_Frontend/HHISIT2018144/src/app/index/index.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/index/index.component.html
@@ -23,8 +23,8 @@
 
             <div class="box" >
                 <div class="row">
-                    <div class="col-md-5 bx" style=" background-image: linear-gradient(to left, rgb(255, 50, 50),
-                    rgb(194, 0, 0));cursor: pointer;" data-toggle="modal" data-target="#HospitalModal">
+                    <div class="col-md-5 bx" style=" background-image: linear-gradient(to left, rgb(255, 234, 50),
+                    rgb(190, 160, 8));cursor: pointer;" data-toggle="modal" (click)="openHospital()">
                         Hospital Registration
                         <h1><i class="fas fa-hospital-user"></i></h1>
                     </div>
@@ -100,20 +100,35 @@
         <div class="modal-body">
   <div>   
     <div class="form-container sign-in-container">
-        <form [formGroup] = "loginForm" (ngSubmit)="login()" class="form1">
+        <form [formGroup] = "HHISservice.hospitalForm" (ngSubmit)="login()" class="example-form">
             
-            <p id="error" style="color: red;">{{loginError}}</p>	
+           <div class="row justify-content-between text-left">
+                <div class="col-md-6">
+                    <mat-form-field class="example-full-width" appearance="fill">
+                        <mat-label>Email</mat-label>
+                        <input type="email" matInput formControlName="email"  placeholder="Ex. pat@example.com">
+                        <mat-error *ngIf="HHISservice.hospitalForm.controls['email'].invalid && !HHISservice.hospitalForm.controls['email'].touched">
+                          Please enter a valid email address
+                        </mat-error>
+                        <mat-error *ngIf="HHISservice.hospitalForm.controls['email']">
+                          Email is <strong>required</strong>
+                        </mat-error>
+                      </mat-form-field>
+                </div>
+                <div class="col-md-6">
+                    <mat-form-field class="example-full-width" appearance="fill">
+                        <mat-label>Email</mat-label>
+                        <input type="email" matInput formControlName="email"  placeholder="Ex. pat@example.com">
+                        <mat-error *ngIf="HHISservice.hospitalForm.controls['email'].invalid && !HHISservice.hospitalForm.controls['email'].touched">
+                          Please enter a valid email address
+                        </mat-error>
+                        <mat-error *ngIf="HHISservice.hospitalForm.controls['email']">
+                          Email is <strong>required</strong>
+                        </mat-error>
+                      </mat-form-field>
+                </div>
+           </div>
             
-            <input type="text" formControlName="username" placeholder="User ID" /> 
-            <span *ngIf="loginForm.controls['username'].invalid && (loginForm.controls['username'].dirty || loginForm.controls['username'].touched)" class="text text-danger">
-                username is required.
-            </span>
-                <input type="password" formControlName="password" placeholder="Password" /> 
-                <span *ngIf="loginForm.controls['password'].invalid && (loginForm.controls['password'].dirty || loginForm.controls['password'].touched)" class="text text-danger">
-                    Password is required
-                </span>
-                <a href="#">Forgot your password?</a>
-            <button [disabled]="loginForm.pristine || loginForm.invalid" name="login" id="login" type="submit">Login</button>
         </form>
     </div>
     
