--- a/HHIS_Frontend/HHISIT2018144/src/app/Doctor/edit-doctor-prescription/edit-doctor-prescription.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/Doctor/edit-doctor-prescription/edit-doctor-prescription.component.html
@@ -1,1 +1,43 @@
-<p>edit-doctor-prescription works!</p>
+<div class="row justify-content-between text-left">
+  <div class="form-group col-sm-8 flex-column d-flex">   <h2 mat-dialog-title>Patient Prescription Details</h2></div>
+  <div class="form-group col-sm-4 flex-column d-flex"> 
+      <button  mat-raised-button color="warn" (click)="cancel()">X</button> </div>
+</div>
+<mat-dialog-content class="mat-typography">
+  <form class="form-card"  [formGroup]="doctorService.medicineDescriptionForm">
+
+
+      <div class="row justify-content-between text-left">
+        <div class="form-group col-sm-6 flex-column d-flex"> 
+          <label for="">Patient NIC</label>
+            <input type="text" id="patientNic"  formControlName="patientNic" autocomplete="off" placeholder="Patient NIC"> 
+        </div>
+        <div class="form-group col-sm-6 flex-column d-flex"> 
+          <label for="">number Of Day</label>
+          <input type="text" id="numberOfDay" style="width: 83%;" formControlName="numberOfDay" placeholder="Number Of Days"> 
+        </div>
+     </div>
+
+   
+     
+  <div  class="row justify-content-between text-left"  >
+    <div formArrayName="medicineName" class="form-group col-sm-6 flex-column d-flex" > 
+      <label for="">Medicine Name</label>
+      <div *ngFor="let medicine of doctorService.medicineControl; let i=index"> 
+        
+        <input type="text" id="medicineName" [formControlName]="i" placeholder="Medicine Name" style="width: 100%;margin-bottom: 15px;"> 
+      </div>
+    </div>
+    <div class="form-group col-sm-6 flex-column d-flex" formArrayName="medicineDec" >
+      <label for="">Description</label>
+        <div *ngFor="let medicineDec of doctorService.medicineDecControl; let j=index">
+          <textarea [formControlName]="j" id="medicineDec" cols="28" rows="1" placeholder="Description"></textarea>
+        </div>
+        
+    </div>
+   
+  </div>
+</form>
+</mat-dialog-content>
+
+
