--- a/HHIS_Frontend/HHISIT2018144/src/app/dashboard/dashboard.component.scss
+++ b/HHIS_Frontend/HHISIT2018144/src/app/dashboard/dashboard.component.scss
@@ -1,1 +1,201 @@
-@import "../home/home.component.scss";
+                     
+                            .top-chart-earn {
+                                border-radius: 5px;
+                                padding-top: 15px;
+                                box-shadow: -2px 3px 13px 0px #ddd6;
+                        }
+                            
+                            .last-month {
+                                line-height: 20px;
+                                text-align: center;
+                        }
+                            
+                            .last-month h5 {
+                                font-size: 20px;
+                                font-weight: 600;
+                        }
+                            
+                            .last-month p {
+                                font-size: 12px;
+                                color: #777;
+                        }
+                            
+                            .earn {
+                                margin: 12px 0;
+                        }
+                            
+                            .earn h2 {
+                                font-size: 26px;
+                                font-weight: 600;
+                        }
+                            
+                            .sale h2 {
+                                font-size: 25px;
+                                font-weight: 600;
+                        }
+                            
+                            .chart-nav.active {
+                                background-color: #fff !important;
+                                color: var(--main-color) !important;
+                                border-bottom: 2px solid var(--main-color);
+                                border-radius: 0;
+                        }
+                            
+                            .chart-nav {
+                                color: var(--second-color);
+                        }
+                            
+                            .chart-nav:hover {
+                                color: var(--main-color);
+                        }
+                            
+                            .chart-nav {
+                                padding: 0px 15px;
+                                border-radius: 0;
+                        }
+                            
+                            .chart-header-tab {
+                                width: 100%;
+                                justify-content: flex-end;
+                                align-items: center;
+                        }
+                            
+                            
+                            /* ============top-section chart bottom row style======== */
+                            
+                            
+                            .bdr-cls {
+                                border-right: 1px solid #dddddd6b;
+                        }
+                            
+                            .wre-sec {
+                                overflow: hidden;
+                                border-top: 1px solid #dddddd6b;
+                        }
+                            
+                            .earn-view {
+                                display: flex;
+                                justify-content: space-around;
+                                align-items: center;
+                                padding: 10px 0;
+                        }
+                            
+                            .earn-icon {
+                                width: 30px;
+                                height: 30px;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                border-radius: 100%;
+                                padding: 3px;
+                                line-height: 20px;
+                                font-size: 14px;
+                                color: var(--white-color);
+                        }
+                            
+                            .wallet {
+                                background: var(--main-color);
+                        }
+                            
+                            .referral {
+                                background: #7d12ce;
+                        }
+                            
+                            .sales {
+                                background: #0ea3d0;
+                        }
+                            
+                            .earning {
+                                background: #fbbf15;
+                        }
+                            
+                            .traffice-title {
+                                text-align: left;
+                                font-size: 17px;
+                                font-weight: 500;
+                                padding-left: 15px;
+                        }
+                            
+                            
+                            /* =====================traffice chart style============= */
+                            
+                            
+                            div#chart-2 {
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                        }
+                            
+                            
+                            
+/////////////////////////////////////////////////////////////////////////////
+                                .main-part{
+                                width:100%;
+                                margin:0 auto;
+                                text-align: center;
+                                padding: 0px 5px;
+                            }
+                                .cpanel{
+                                width:32%;
+                                display: inline-block;
+                                background-color:#34495E;
+                                color:#fff;
+                                margin-top: 50px;
+                                margin-left: 10px;
+                            }
+                                .icon-part i{
+                                font-size: 30px;
+                                padding:10px;
+                                border:1px solid #fff;
+                                border-radius:50%;
+                                margin-top:-25px;
+                                margin-bottom: 10px;
+                                background-color:#34495E;
+                            }
+                                .icon-part p{
+                                margin:0px;
+                                font-size: 20px;
+                                padding-bottom: 10px;
+                            }
+                                .card-content-part{
+                                background-color: #2F4254;
+                                padding: 5px 0px;
+                            }
+                                .cpanel .card-content-part:hover{
+                                background-color: #5a5a5a;
+                                cursor: pointer;
+                            }
+                                .card-content-part a{
+                                color:#fff;
+                                text-decoration: none;
+                            }
+                                .cpanel-green .icon-part,.cpanel-green .icon-part i{
+                                background-color: #16A085;
+                            }
+                                .cpanel-green .card-content-part{
+                                background-color: #149077;
+                            }
+                                .cpanel-orange .icon-part,.cpanel-orange .icon-part i{
+                                background-color: #F39C12;
+                            }
+                                .cpanel-orange .card-content-part{
+                                background-color: #DA8C10;
+                            }
+                                .cpanel-blue .icon-part,.cpanel-blue .icon-part i{
+                                background-color: #2980B9;
+                            }
+                                .cpanel-blue .card-content-part{
+                                background-color:#2573A6;
+                            }
+                                .cpanel-red .icon-part,.cpanel-red .icon-part i{
+                                background-color:#E74C3C;
+                            }
+                                .cpanel-red .card-content-part{
+                                background-color:#CF4436;
+                            }
+                                .cpanel-skyblue .icon-part,.cpanel-skyblue .icon-part i{
+                                background-color:#8E44AD;
+                            }
+                                .cpanel-skyblue .card-content-part{
+                                background-color:#803D9B;
+                            }
