--- a/HHIS_Frontend/HHISIT2018144/src/app/index/user-register/user-register.component.html
+++ b/HHIS_Frontend/HHISIT2018144/src/app/index/user-register/user-register.component.html
@@ -36,13 +36,16 @@
             </div>
         </div>
         <div class="row justify-content-between text-left">
-            <div class="form-group col-sm-6 flex-column d-flex">
+            <div class="form-group col-sm-5 flex-column d-flex">
                 <input type="text"  formControlName="district" placeholder="District"> 
                 <span class="help-block" *ngIf="service.userRegister.controls['district'].invalid && service.userRegister.controls['district'].touched">Please Enter Valid district!</span>
              </div>
-             <div class="form-group col-sm-6 flex-column d-flex"> 
+             <div class="form-group col-sm-5 flex-column d-flex"> 
                 <input type="text" id="city" formControlName="city" placeholder="City"> 
                 <span class="help-block" *ngIf="service.userRegister.controls['city'].invalid && service.userRegister.controls['city'].touched">Please Enter Valid city!</span>
+            </div>
+            <div class="form-group col-sm-2 flex-column d-flex"> 
+                <input type="text" id="city" formControlName="bloodGroup" placeholder="Blood Group"> 
             </div>
         </div>
         <div class="row justify-content-between text-left">
